# fastvideo-eval

./: .gitignore  AGENTS.md  README.md  SPEC.md  config.yaml.example  modal_app.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/frontend/public/: app.js  index.html  manifest.json  style.css
app/frontend/public/css/: base.css  components.css  evaluate.css
app/frontend/public/js/: core.js  evaluate.js  matrix.js  results.js  review.js  settings.js
app/server/: __init__.py  auth.py  database.py  main.py  storage.py
app/server/routes/: data_ops.py  results.py  settings.py  videos.py
app/server/tests/: test_server.py
app/wandb_client/: __init__.py  cache.py  client.py  config.py  models.py
app/wandb_client/tests/: __init__.py  test_cache.py  test_client.py  test_config.py  test_models.py
docs/: eval_pipeline_exec_brief.md  eval_pipeline_full.md  eval_pipeline_summary.md  index.html  meeting_notes_raw.md  meeting_transcript_raw.md  ui_design_spec.md  wandb_video_indexing.md
docs/slides/themes/: arctic.css  dracula.css  ocean.css  paper.css  rosepine.css  sakura.css  slate.css  solarized-light.css  sunset.css
docs/tests/wandb_integration/: index.html  slides.md
docs/tests/wandb_integration/themes/: copper.css  ember.css  mint.css  neon.css  solarized-dark.css
scripts/: download_step.py  explore_wandb.py
slides/: engine.js  index.html  manifest.json  slides.md
slides/themes/: aurora.css  forest.css  ivory.css  lavender.css  midnight.css  terminal.css
